change command line parser

--- a/data/template/index.html
+++ b/data/template/index.html
@@ -7,7 +7,7 @@
     <body>
         <div>
             Node.js implementation of FuncTree
-            <div id="viz"></div>
+            <div id="ft-main"></div>
         </div>
     </body>
 </html>
