--- a/data/template/index.html
+++ b/data/template/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
+        <meta name="author" content="Yuta Yamate">
+        <meta name="copyright" content="Copyright © 2016 Kurokawa Nakashima Yamada Lab, Tokyo Institute of Technology. All Rights Reserved.">
         <title>FuncTree</title>
     </head>
     <body>
-        <div>
-            Node.js implementation of FuncTree
-            <div id="ft-main"></div>
+        <div id="main">
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
