--- a/data/template/index.html
+++ b/data/template/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="author" content="Yuta Yamate">
-        <meta name="copyright" content="Copyright © 2016 Kurokawa Nakashima Yamada Lab, Tokyo Institute of Technology. All Rights Reserved.">
+        <meta name="copyright" content="Copyright (c) 2014-2016 Kurokawa Nakashima Yamada Lab, Tokyo Institute of Technology. All Rights Reserved.">
         <title>FuncTree</title>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
