--- a/data/template/index.html
+++ b/data/template/index.html
@@ -9,7 +9,6 @@
     <body>
         <div id="main">
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
@@ -50,6 +49,23 @@
 
                 d3.select('#charts')
                     .selectAll('circle')
+                    .on({
+                        'mouseover': function() {
+                            d3.select(this).style({
+                                'fill': '#000',
+                                'opacity': 0.5
+                            });
+                            
+                        },
+                        'mouseout': function() {
+                            d3.select(this).attr({
+                                'style': null
+                            });
+                        }
+                    });
+
+                d3.select('#charts')
+                    .selectAll('rect')
                     .on({
                         'mouseover': function() {
                             d3.select(this).style({
