--- a/templates/html/viewer.html
+++ b/templates/html/viewer.html
@@ -2,8 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="copyright" content="Copyright (c) 2014-2016 Kurokawa Nakashima Yamada Lab, Tokyo Institute of Technology.">
-        <title>FuncTree</title>
+        <title>FuncTree 2</title>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
     <body>
@@ -12,13 +11,11 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
         <script>
-
             !(function() {
                 var svg = d3.select('svg');
                 var width = svg.attr('width');
                 var height = svg.attr('height');
                 var buffer = svg.select('g');
-
                 svg.call(d3.behavior.zoom()
                     .translate([width / 2, height / 2])
                     .scaleExtent([0.5, 10])
@@ -28,65 +25,46 @@
                         });
                     })
                 );
-
                 d3.select('#nodes')
                     .selectAll('circle')
-                    .on({
-                        'mouseover': function() {
-                            d3.select(this).style({
-                                'r': 10,
-                                'fill': '#000',
-                                'opacity': 0.5
-                            });
-                        },
-                        'mouseout': function() {
-                            d3.select(this).attr({
-                                'style': null
-                            });
-                        }
+                    .on('mouseover', function() {
+                        d3.select(this)
+                            .style('r', 10)
+                            .style('fill', '#000')
+                            .style('opacity', 0.5);
+                    })
+                    .on('mouseout', function() {
+                        d3.select(this)
+                            .attr('style', null);
                     });
-
                 d3.select('#rounds')
                     .selectAll('circle')
-                    .on({
-                        'mouseover': function() {
-                            d3.select(this).style({
-                                'fill': '#000',
-                                'opacity': 0.5
-                            });
-
-                        },
-                        'mouseout': function() {
-                            d3.select(this).attr({
-                                'style': null
-                            });
-                        }
+                    .on('mouseover', function() {
+                        d3.select(this)
+                            .style('fill', '#000')
+                            .style('opacity', 0.5);
+                    })
+                    .on('mouseout', function() {
+                        d3.select(this)
+                            .attr('style', null);
                     });
-
                 d3.select('#charts')
                     .selectAll('rect')
-                    .on({
-                        'mouseover': function() {
-                            d3.select(this).style({
-                                'fill': '#000',
-                                'opacity': 0.5
-                            });
-
-                        },
-                        'mouseout': function() {
-                            d3.select(this).attr({
-                                'style': null
-                            });
-                        }
+                    .on('mouseover', function() {
+                        d3.select(this)
+                            .style('fill', '#000')
+                            .style('opacity', 0.5);
+                    })
+                    .on('mouseout', function() {
+                        d3.select(this)
+                            .attr('style', null);
                     });
 
                 $('[data-toggle="tooltip"]').tooltip({
                     container: 'body',
                     placement: 'top'
                 });
-
             })();
-
         </script>
     </body>
 </html>
